--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "throughline",
   "version": "1.0.0",
   "description": "a simplified prototype web app connecting the dots",
-  "main": "server.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js -e html,css,js"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js -e html,css,js"
   },
   "keywords": [],
   "author": "",
