--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.12",
-    "nunjucks": "^3.2.3"
+    "nodemon": "^2.0.12"
   }
 }
