--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a simplified prototype web app connecting the dots",
   "main": "server/index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js -e html,css,js"
+    "start": "node server",
+    "dev": "nodemon server -e html,css,js"
   },
   "keywords": [],
   "author": "",
